# dynamixe

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
dynamixe/: __init__.py  _jmespath.py  client.py  expressions.py  models.py  transact_get.py  transact_writer.py  types.py
tests/: conftest.py
tests/integration/: conftest.py  test_between_condition.py  test_client.py  test_client_edge_cases.py  test_dataclass.py  test_models_edge_cases.py  test_pydantic.py  test_transact_get.py  test_transact_get_edge_cases.py  test_transact_writer.py  test_transact_writer_edge_cases.py
tests/unit/: __init__.py  test_comparison_expressions.py  test_condition_helpers.py  test_dataclass_support.py  test_dynamo_config_attribute.py  test_expression_access.py  test_expression_combination.py  test_model_config.py  test_pydantic_integration.py  test_query_output.py  test_types_serialization.py
