[project]
name = "dynamixe"
version = "0.1.0"
description = "SQLAlchemy-style DynamoDB ORM with expression-based API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26",
    "pydantic>=2.0",
    "jmespath>=0.10.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.73",
    "moto>=5.1.22",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dynamixe"]

[tool.pytest.ini_options]
addopts = "--cov=dynamixe --cov-report=term-missing --cov-report=html -v"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]
