[project]
name = "dynamixe"
version = "0.1.0"
description = "A developer-friendly library for DynamoDB that simplifies single-table design without ORM lock-in"
readme = "README.md"
authors = [
    { name = "Sérgio Rafael Siqueira", email = "osergiosiqueira@gmail.com" },
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "dynamodb",
    "aws",
    "orm",
    "boto3",
    "database",
    "type-safe",
]
dependencies = [
    "boto3>=1.26",
    "jmespath>=0.10.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.73",
    "moto>=5.1.22",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "pyright>=1.1.0",
]

typing = ["mypy>=1.0", "boto3-stubs[dynamodb]>=1.42.73"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dynamixe"]
include = ["dynamixe/py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=dynamixe --cov-report=term-missing --cov-report=html -v"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["dynamixe"]

[tool.pyright]
reportAttributeAccessIssue = "none"
